color contrast corrections

--- a/css/style.css
+++ b/css/style.css
@@ -213,44 +213,44 @@ header {
 }
 
 .audio-card-title {
-	color: #766956;
+	color: #94846B;
 }
 
 .audio-card-text {
-	color: #A99C89;
+	color: #94846B;
 }
 
 .maya-card-title {
-	color: #487D84;
+	color: #417176;
 }
 
 .maya-card-text {
-	color: #7BB0B7;
+	color: #5A9CA5;
 }
 
 
 .photo-card-title {
-	color: #5F527A;
+	color: #56496E;
 }
 
 .photo-card-text {
-	color: #9285AD;
+	color: #776699;
 }
 
 .bartermates-card-title {
-	color: #766956;
+	color: #6B5F4D;
 }
 
 .bartermates-card-text {
-	color: #A99C89;
+	color: #94846B;
 }
 
 .video-card-title {
-	color: #44886D;
+	color: #3D7A62;
 }
 
 .video-card-text {
-	color: #77BBA0;
+	color: #55AA88;
 }
 
 #footer {
